fix: #6166 employee & status columns vertical align top

--- a/apps/gauzy/src/app/pages/jobs/search/search/search.component.scss
+++ b/apps/gauzy/src/app/pages/jobs/search/search/search.component.scss
@@ -77,9 +77,12 @@
       $default-box-shadow
     );
   }
-  .table-scroll-container {
+  ::ng-deep .table-scroll-container {
     flex-grow: 10;
     max-height: unset;
+    ng2-smart-table table tr td {
+      vertical-align: top !important;
+    }
   }
 }
 
